Fix font on home page and update spacing

--- a/site/_sass/pages/_home.scss
+++ b/site/_sass/pages/_home.scss
@@ -43,7 +43,7 @@ div#main-content #home{
             font-family: $leagueGothic;
             font-size: 40px;
             line-height: 70px;
-            padding: 0 5px;
+            padding: 0 15%;
             color: #000;
             border-bottom: solid 4px #000;
             margin: 16px;
@@ -100,7 +100,7 @@ div#main-content #home{
 
         li {
           a:link, a:visited, a:active{
-            margin: 8px;
+            margin: 22%;
             padding: 0;
           }
         }
